remove item works spacing fixed in wraper

--- a/shopping-cart-app/src/components/StoreLogin/StoreLogin.css
+++ b/shopping-cart-app/src/components/StoreLogin/StoreLogin.css
@@ -1,11 +1,10 @@
-.everything{
-	width: 100%;
-	height: 100%;
-	padding-top: 15px;
-	/*background-color: #F7FBFD; */
+
+.store-name{
+	max-width: 1140px;
 }
 .title, .subtitle{
 	text-align: center;
+
 }
 .title{
 	font-family: 'Roboto Slab', serif;
@@ -23,7 +22,7 @@
 }
 
 .section{
-	padding-left: 10%;
+	/*padding-left: 10%;*/
 	width: 100%;
 	height: 100%;
 	position: absolute;
